--- a/Basic/Basic/Basic.csproj
+++ b/Basic/Basic/Basic.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Basic._14.Program</StartupObject>
+    <StartupObject>Basic.HTML</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -61,8 +61,18 @@
     <Compile Include="7.cs" />
     <Compile Include="8.cs" />
     <Compile Include="9.cs" />
+    <Compile Include="CustomShape.cs" />
+    <Compile Include="Edu.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="HTML.cs" />
+    <Compile Include="IDrawable.cs" />
+    <Compile Include="MyPaint.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgramCar.cs" />
+    <Compile Include="ProgramRate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Triangle.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
